--- a/src/bileşenler/Gönderiler/Gönderiler.css
+++ b/src/bileşenler/Gönderiler/Gönderiler.css
@@ -4,7 +4,7 @@
   min-width: 400px;
   margin: 5px auto;
 }
-.post-header{
+.post-header {
   display: flex;
   align-items: center;
 }
@@ -49,4 +49,10 @@
   width: 100px;
   margin: 15px 0px;
   font-size: 16px;
+}
+
+.yorumArea {
+  display: flex;
+  margin-left: 10px;
+  column-gap: 2vw;
 }
